Updated UI and translations. Status Fragment now returns to the login screen if the client is not connected.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,17 +20,18 @@
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:background="@drawable/ic_wave"
+        android:backgroundTint="@color/blue_400"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topView" />
 
     <EditText
         android:id="@+id/txtUser"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="236dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="96dp"
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_round_person_24"
         android:drawablePadding="6dp"
@@ -42,15 +43,15 @@
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/waveView" />
 
     <EditText
         android:id="@+id/txtPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="96dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="96dp"
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_round_key_24"
         android:drawablePadding="6dp"
@@ -68,14 +69,14 @@
         android:id="@+id/btnLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="96dp"
         android:layout_marginTop="64dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="96dp"
         android:layout_marginBottom="135dp"
         android:background="@drawable/round_bg"
         android:fontFamily="@font/montserrat"
-        android:text="LOGIN"
-        android:textAllCaps="false"
+        android:text="@string/login"
+        android:textAllCaps="true"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,11 +85,11 @@
 
     <EditText
         android:id="@+id/txtServerPort"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="96dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="96dp"
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_round_login_24"
         android:drawablePadding="6dp"
@@ -104,11 +105,11 @@
 
     <EditText
         android:id="@+id/txtServerIP"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="96dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="96dp"
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_round_connection_24"
         android:drawablePadding="6dp"
