--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -56,6 +56,7 @@
         android:ems="10"
         android:fontFamily="@font/montserrat"
         android:hint="@string/prd_name"
+        android:inputType="textPersonName"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
