--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansreg"
         android:hint="@string/username"
         android:inputType="textEmailAddress"
         android:padding="8dp"
@@ -57,7 +57,7 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansreg"
         android:hint="@string/psw"
         android:inputType="textPassword"
         android:padding="8dp"
@@ -74,7 +74,7 @@
         android:layout_marginEnd="96dp"
         android:layout_marginBottom="135dp"
         android:background="@drawable/round_bg"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansbold"
         android:text="@string/login"
         android:textAllCaps="true"
         android:textStyle="bold"
@@ -95,7 +95,7 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansreg"
         android:hint="@string/server_port"
         android:inputType="number"
         android:padding="8dp"
@@ -115,7 +115,7 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansreg"
         android:hint="@string/server_ip"
         android:inputType="textPersonName"
         android:padding="8dp"
@@ -129,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansreg"
         android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="36sp"
@@ -143,7 +143,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:fontFamily="@font/montserrat"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/productsansreg"
         android:text="@string/execute_login"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/topView"
