--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/round_bg"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansbold"
         android:text="@string/menu_add"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansreg"
         android:hint="@string/prd_code"
         android:inputType="number"
         android:padding="8dp"
@@ -54,7 +54,7 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansreg"
         android:hint="@string/prd_name"
         android:inputType="textPersonName"
         android:padding="8dp"
@@ -74,7 +74,7 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/productsansreg"
         android:hint="@string/prd_quantity"
         android:inputType="number"
         android:padding="8dp"
