--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -29,7 +29,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/round_bg"
-            android:fontFamily="@font/montserrat"
+            android:fontFamily="@font/productsansbold"
             android:text="@string/check"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
