--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -153,14 +153,14 @@
 
     <ImageView
         android:id="@+id/accView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/ic_round_person"
+        android:background="@drawable/ic_round_person_24"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/topView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/topView"
-        tools:srcCompat="@drawable/ic_round_person" />
+        app:layout_constraintTop_toTopOf="@+id/topView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
