Fixed a bug which caused the NavDrawer items' font to reset back to the system default.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_add">
+    app:startDestination="@id/nav_add"
+    app:itemTextAppearance="@style/ProductSans">
 
     <fragment
         android:id="@+id/nav_scanner"
