--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="fontFamily">@font/productsansreg</item>
-        <item name="fontFamily" tools:ignore="DuplicateDefinition">@font/productsansreg</item> <!-- target android sdk versions < 26 and > 14 if theme other than AppCompat -->
+        <item name="android:fontFamily">@font/productsansreg</item> <!-- target android sdk versions < 26 and > 14 if theme other than AppCompat -->
     </style>
 
     <style name="Theme.Stocked.NoActionBar">
@@ -24,4 +24,9 @@
     <style name="Theme.Stocked.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Stocked.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="ProductSans" parent="android:Widget.TextView">
+        <item name="fontFamily">@font/productsansreg</item>
+        <item name="android:fontFamily">@font/productsansreg</item>
+    </style>
 </resources>
