--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -37,6 +37,7 @@
         android:hint="@string/prd_code"
         android:inputType="number"
         android:padding="8dp"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,15 +51,16 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/round_border"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_,() "
         android:drawableStart="@drawable/ic_round_text_fields_24"
         android:drawablePadding="6dp"
         android:drawableTint="@color/blue_400"
         android:ems="10"
         android:fontFamily="@font/productsansreg"
         android:hint="@string/prd_name"
-        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_,() "
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:padding="8dp"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dttCode" />
@@ -79,6 +81,7 @@
         android:hint="@string/prd_quantity"
         android:inputType="number"
         android:padding="8dp"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dttProductName" />
